--- a/server/templates/magic-link.html
+++ b/server/templates/magic-link.html
@@ -1,53 +1,43 @@
 <!doctype html>
 <html>
   <body>
-    <div
-      style='background-color:#000000;color:#FFFFFF;font-family:"Iowan Old Style", "Palatino Linotype", "URW Palladio L", P052, serif;font-size:16px;font-weight:400;letter-spacing:0.15008px;line-height:1.5;margin:0;padding:32px 0;min-height:100%;width:100%'
-    >
-      <table
-        align="center"
-        width="100%"
-        style="margin:0 auto;max-width:600px;background-color:#000000"
-        role="presentation"
-        cellspacing="0"
-        cellpadding="0"
-        border="0"
-      >
-        <tbody>
-          <tr style="width:100%">
-            <td>
-              <div style="padding:24px 24px 24px 24px;text-align:center">
-                <img
-                  alt=""
-                  src="https://d1iiu589g39o6c.cloudfront.net/live/platforms/platform_A9wwKSL6EV6orh6f/images/wptemplateimage_jc7ZfPvdHJ6rtH1W/&amp;.png"
-                  height="24"
-                  style="height:24px;outline:none;border:none;text-decoration:none;vertical-align:middle;display:inline-block;max-width:100%"
-                />
-              </div>
-              <div
-                style="color:#ffffff;font-size:16px;font-weight:normal;text-align:center;padding:16px 24px 16px 24px"
-              >
-                Here is your one-time token:
-              </div>
-              <h1
-                style='font-weight:bold;text-align:center;margin:0;font-family:"Nimbus Mono PS", "Courier New", "Cutive Mono", monospace;font-size:32px;padding:16px 24px 16px 24px'
-              >
-                {{ token }}
-              </h1>
-              <div
-                style="color:#868686;font-size:16px;font-weight:normal;text-align:center;padding:16px 24px 16px 24px"
-              >
-                This code will expire in 30 minutes.
-              </div>
-              <div
-                style="color:#868686;font-size:14px;font-weight:normal;text-align:center;padding:16px 24px 16px 24px"
-              >
-                Problems? Just reply to this email.
-              </div>
-            </td>
-          </tr>
-        </tbody>
+    <div style="background-color: #000000; color: #ffffff; font-family: 'Iowan Old Style', 'Palatino Linotype', 'URW Palladio L', P052, serif; font-size: 16px; font-weight: 400; letter-spacing: 0.15008px; line-height: 1.5; margin: 0; padding: 32px 0; min-height: 100%; width: 100%;">
+      <table style="margin: 0 auto; max-width: 600px; background-color: #000000;" role="presentation" border="0" width="100%" cellspacing="0" cellpadding="0" align="center">
+      <tbody>
+      <tr style="width: 100%;">
+      <td>
+        <div style="padding:24px 24px 24px 24px;text-align:center">
+            <img
+              alt=""
+              src=""
+              height="24"
+              style="height:24px;outline:none;border:none;text-decoration:none;vertical-align:middle;display:inline-block;max-width:100%"
+            />
+        </div>
+        <div style="color: #ffffff; font-size: 16px; text-align: center; padding: 16px">
+          Click the button below to log in.
+        </div>
+        <div style="text-align:center;">
+          <a href="{{ url }}" style="text-align:center;text-decoration:none;display:inline-block;background:#fff;padding:16px;word-break:keep-all;font-size:16px;line-height:1.5;" target="_blank">
+            <strong>Log in</strong>
+          </a>
+        </div>
+        <div style="color: #ffffff; font-size: 14px; font-weight: normal; text-align: center; padding: 16px 24px 16px 24px;">
+          You can also copy and paste this one-time token to log in:
+        </div>
+        <div style="font-size: 14px;text-align: center; margin: 0; font-family: 'Nimbus Mono PS', 'Courier New', 'Cutive Mono', monospace;">
+          {{ token }}
+        </div>
+        <div style="color: #868686; font-size: 12px; text-align: center; padding: 16px">
+          This request will expire in {{ expiry }} minutes. Please do not share the link or code with anyone. Confirming this request logs you in using the email {{ email }}.
+        </div>
+        <div style="color: #868686; font-size: 12px; text-align: center; padding: 16px">
+          This login was requested at {{ time }} on {{ date }} using {{ useragent }}.
+        </div>
+      </td>
+      </tr>
+      </tbody>
       </table>
-    </div>
+      </div>
   </body>
 </html>
