--- a/server/templates/magic-link.html
+++ b/server/templates/magic-link.html
@@ -6,30 +6,30 @@
       <tbody>
       <tr style="width: 100%;">
       <td>
-        <div style="padding:24px 24px 24px 24px;text-align:center">
+        <!-- <div style="padding:24px;text-align:center">
             <img
               alt=""
               src=""
               height="24"
               style="height:24px;outline:none;border:none;text-decoration:none;vertical-align:middle;display:inline-block;max-width:100%"
             />
-        </div>
+        </div> -->
         <div style="color: #ffffff; font-size: 16px; text-align: center; padding: 16px">
           Click the button below to log in.
         </div>
         <div style="text-align:center;">
-          <a href="{{ url }}" style="text-align:center;text-decoration:none;display:inline-block;background:#fff;padding:16px;word-break:keep-all;font-size:16px;line-height:1.5;" target="_blank">
+          <a href="{{ url }}" style="text-align:center;text-decoration:none;display:inline-block;background:#fff;padding:12px;word-break:keep-all;font-size:16px;line-height:1.5;" target="_blank">
             <strong>Log in</strong>
           </a>
         </div>
-        <div style="color: #ffffff; font-size: 14px; font-weight: normal; text-align: center; padding: 16px 24px 16px 24px;">
+        <div style="color: #ffffff; font-size: 14px; text-align: center; padding: 16px;">
           You can also copy and paste this one-time token to log in:
         </div>
         <div style="font-size: 14px;text-align: center; margin: 0; font-family: 'Nimbus Mono PS', 'Courier New', 'Cutive Mono', monospace;">
           {{ token }}
         </div>
         <div style="color: #868686; font-size: 12px; text-align: center; padding: 16px">
-          This request will expire in {{ expiry }} minutes. Please do not share the link or code with anyone. Confirming this request logs you in using the email {{ email }}.
+          This request will expire in a while. Please do not share the link or code with anyone. Confirming this request logs you in using the email {{ email }}.
         </div>
         <div style="color: #868686; font-size: 12px; text-align: center; padding: 16px">
           This login was requested at {{ time }} on {{ date }} using {{ useragent }}.
