--- a/server/templates/magic-link.html
+++ b/server/templates/magic-link.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <body>
-    <div style="background-color: #000000; color: #ffffff; font-family: 'Iowan Old Style', 'Palatino Linotype', 'URW Palladio L', P052, serif; font-size: 16px; font-weight: 400; letter-spacing: 0.15008px; line-height: 1.5; margin: 0; padding: 32px 0; min-height: 100%; width: 100%;">
+    <div style="background-color: #000000; color: #ffffff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Trebuchet MS', Roboto, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; letter-spacing: 0.15008px; line-height: 1.5; margin: 0; padding: 32px 0; min-height: 100%; width: 100%;">
       <table style="margin: 0 auto; max-width: 600px; background-color: #000000;" role="presentation" border="0" width="100%" cellspacing="0" cellpadding="0" align="center">
       <tbody>
       <tr style="width: 100%;">
